--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,15 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tinymce/tinymce-react": "^6.1.0",
     "axios": "^1.9.0",
+    "dompurify": "^3.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.5.2",
-    "tailwindcss": "^4.1.4"
+    "react-router": "^7.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tailwindcss": "^4.1.7",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.0"
