--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 VITE_TINYMCE_API_KEY=egsi9sdz71isu6kog7pve93h39oka0hc5zemog6xmwwnurm7
+VITE_API_URL=http://localhost:8000/api
+VITE_URL=http://localhost:8000/storage
